@@ -11,3 +11,5 @@ profile/user-settings-console
 ap/sbopkg
 ap/recode
 ap/unrar
+ap/p7zip
+ap/hplip
