@@ -1,0 +1,1 @@
+6caadc4a9e49076c284b146e2dce2937  hplip-3.12.11.tar.gz
