@@ -1,0 +1,154 @@
+#!/bin/sh
+
+# Slackware build script for p7zip
+
+# Copyright 2007-2011 Heinz Wiesinger, Amsterdam, Netherlands
+# All rights reserved.
+#
+# Redistribution and use of this script, with or without modification, is
+# permitted provided that the following conditions are met:
+#
+# 1. Redistributions of this script must retain the above copyright
+#    notice, this list of conditions and the following disclaimer.
+#
+# THIS SOFTWARE IS PROVIDED BY THE AUTHOR ''AS IS'' AND ANY EXPRESS OR IMPLIED
+# WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
+# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO
+# EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
+# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
+# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
+# OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+# WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
+# OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+# ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
+#
+# Modified by Niki Kovacs <info@microlinux.fr>
+
+PRGNAM=p7zip
+VERSION=9.20.1
+BUILD=${BUILD:-1}
+TAG=${TAG:-_microlinux}
+
+NUMJOBS=${NUMJOBS:--j2}
+
+if [ -z "$ARCH" ]; then
+  case "$( uname -m )" in
+    i?86) ARCH=i486 ;;
+    arm*) ARCH=arm ;;
+       *) ARCH=$( uname -m ) ;;
+  esac
+fi
+
+CWD=$(pwd)
+TMP=${TMP:-/tmp/microlinux}
+PKG=$TMP/package-$PRGNAM
+OUTPUT=${OUTPUT:-/tmp}
+
+if [ "$ARCH" = "i486" ]; then
+  SLKCFLAGS="-O2 -march=i486 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "i686" ]; then
+  SLKCFLAGS="-O2 -march=i686 -mtune=i686"
+  LIBDIRSUFFIX=""
+elif [ "$ARCH" = "x86_64" ]; then
+  SLKCFLAGS="-O2 -fPIC"
+  LIBDIRSUFFIX="64"
+else
+  SLKCFLAGS="-O2"
+  LIBDIRSUFFIX=""
+fi
+
+# building the GUI
+GUI=${GUI:-no}
+
+set -e
+
+if [ ! -r ${PRGNAM}_${VERSION}_src_all.tar.bz2 ] ; then
+   wget -c http://downloads.sourceforge.net/$PRGNAM/${PRGNAM}_${VERSION}_src_all.tar.bz2
+fi
+
+md5sum -c ${PRGNAM}_${VERSION}_src_all.tar.bz2.md5
+
+rm -rf $PKG
+mkdir -p $TMP $PKG $OUTPUT
+cd $TMP
+rm -rf ${PRGNAM}_${VERSION}
+tar xvf $CWD/${PRGNAM}_${VERSION}_src_all.tar.bz2
+cd ${PRGNAM}_${VERSION}
+chown -R root:root .
+chmod -R u+w,go+r-w,a-s .
+
+make $NUMJOBS all3 \
+  OPTFLAGS="$SLKCFLAGS" \
+  DEST_HOME=/usr \
+  DEST_SHARE_DOC=/usr/doc/$PRGNAM-$VERSION \
+  DEST_SHARE=/usr/lib$LIBDIRSUFFIX/p7zip \
+  DEST_DIR=$PKG
+
+if ! [ "$GUI" = "no" ]; then
+    sed -i "s|/usr/lib/|/usr/lib$LIBDIRSUFFIX/|g" CPP/7zip/UI/GUI/makefile.depend
+    make $NUMJOBS 7zG \
+    OPTFLAGS="$SLKCFLAGS" \
+    DEST_HOME=/usr \
+    DEST_SHARE_DOC=/usr/doc/$PRGNAM-$VERSION \
+    DEST_SHARE=/usr/lib$LIBDIRSUFFIX/p7zip \
+    DEST_DIR=$PKG
+fi
+
+make install \
+  OPTFLAGS="$SLKCFLAGS" \
+  DEST_HOME=/usr \
+  DEST_SHARE_DOC=/usr/doc/$PRGNAM-$VERSION \
+  DEST_SHARE=/usr/lib$LIBDIRSUFFIX/p7zip \
+  DEST_DIR=$PKG
+
+# install gzip like wrapper
+install -m 0755 contrib/gzip-like_CLI_wrapper_for_7z/p7zip $PKG/usr/bin/
+install -m 0644 contrib/gzip-like_CLI_wrapper_for_7z/man1/p7zip.1 $PKG/usr/man/man1/
+
+# install midnight commander vfs add on
+mkdir -p $PKG/usr/share/mc/extfs/
+install -m 755 contrib/VirtualFileSystemForMidnightCommander/u7z \
+  $PKG/usr/share/mc/extfs/
+
+if ! [ "$GUI" = "no" ]; then
+  # Unfortunately we have to install 7zG by hand
+  install -m 555 $PKG/usr/bin/7z $PKG/usr/bin/7zG
+  sed -i "s|/usr/lib$LIBDIRSUFFIX/p7zip/7z|/usr/lib$LIBDIRSUFFIX/p7zip/7zG|" $PKG/usr/bin/7zG
+
+  install -m 555 bin/7zG $PKG/usr/lib$LIBDIRSUFFIX/p7zip/7zG
+  cp -r GUI/Lang $PKG/usr/lib$LIBDIRSUFFIX/p7zip/Lang
+  find $PKG/usr/lib$LIBDIRSUFFIX/p7zip/Lang -type d -exec chmod 555 {} \;
+  find $PKG/usr/lib$LIBDIRSUFFIX/p7zip/Lang -type f -exec chmod 444 {} \;
+
+  cp -r GUI/help $PKG/usr/lib$LIBDIRSUFFIX/p7zip/help
+  find $PKG/usr/lib$LIBDIRSUFFIX/p7zip/help -type d -exec chmod 555 {} \;
+  find $PKG/usr/lib$LIBDIRSUFFIX/p7zip/help -type f -exec chmod 444 {} \;
+
+  install -m 555 GUI/p7zipForFilemanager  $PKG/usr/bin/p7zipForFilemanager
+
+  install -m 444 -D GUI/p7zip_16_ok.png $PKG/usr/share/icons/hicolor/16x16/apps/p7zip.png
+
+  mkdir -p $PKG/usr/share/kde4/services/ServiceMenus
+  cp GUI/kde4/*.desktop $PKG/usr/share/kde4/services/ServiceMenus/
+fi
+
+find $PKG | xargs file | grep -e "executable" -e "shared object" | grep ELF \
+  | cut -f 1 -d : | xargs strip --strip-unneeded 2> /dev/null || true
+
+find $PKG/usr/man -type f -exec gzip -9 {} \;
+
+cp TODO $PKG/usr/doc/$PRGNAM-$VERSION
+cp contrib/gzip-like_CLI_wrapper_for_7z/README $PKG/usr/doc/$PRGNAM-$VERSION/README.p7zip
+cat $CWD/$PRGNAM.SlackBuild > $PKG/usr/doc/$PRGNAM-$VERSION/$PRGNAM.SlackBuild
+
+mkdir -p $PKG/install
+cat $CWD/slack-desc > $PKG/install/slack-desc
+cat $CWD/doinst.sh > $PKG/install/doinst.sh
+
+cd $PKG
+/sbin/makepkg -l y -c n $OUTPUT/$PRGNAM-$VERSION-$ARCH-$BUILD$TAG.${PKGTYPE:-txz}
+
+# Cleanup
+cd $TMP
+rm -rf ${PRGNAM}_${VERSION} $PKG
