@@ -1,0 +1,12 @@
+     |-----handy-ruler------------------------------------------------------|
+p7zip: p7zip (file compression/decompression utility)
+p7zip:
+p7zip: 7-Zip is a well-known file compression utility for Windows.
+p7zip: p7zip is a ported version for linux with nearly the same 
+p7zip: capabilities.
+p7zip: 
+p7zip:
+p7zip:
+p7zip:
+p7zip:
+p7zip: Package created by Niki Kovacs <info@microlinux.fr>
