@@ -32,6 +32,8 @@ VERSION=4.0.7
 BUILD=${BUILD:-1}
 TAG=${TAG:-_microlinux}
 
+NUMJOBS=${NUMJOBS:--j2}
+
 if [ -z "$ARCH" ]; then
   case "$( uname -m )" in
     i?86) ARCH=i486 ;;
@@ -44,8 +46,6 @@ CWD=$(pwd)
 TMP=${TMP:-/tmp/microlinux}
 PKG=$TMP/package-$PRGNAM
 OUTPUT=${OUTPUT:-/tmp}
-
-NUMJOBS=${NUMJOBS:--j2}
 
 DOCS="license.txt readme.txt"
 
@@ -77,8 +77,7 @@ cd $PRGNAM
 chown -R root:root .
 chmod -R a-s,u+w,go+r-w .
 
-make $NUMJOBS CXXFLAGS="$SLKCFLAGS" -f makefile.unix || \
-  make CXXFLAGS="$SLKCFLAGS" -f makefile.unix || exit 1
+make $NUMJOBS CXXFLAGS="$SLKCFLAGS" -f makefile.unix 
 
 install -D -m 755 unrar $PKG/usr/bin/unrar || exit 1
 strip --strip-unneeded $PKG/usr/bin/unrar
